2003-09-25  Simon Josefsson  <jas@extundo.com>
            Bruno Haible  <bruno@clisp.org>

	* modules/getdomainname: New file.
	* modules/xgetdomainname: New file.
	* MODULES.html.sh (func_all_modules): Add getdomainname, xgetdomainname.

2003-09-17  Paul Eggert  <eggert@twinsun.com>

	* gnulib-tool: Use "test -h", not "test -L", for portability
	to Solaris 8 /bin/sh.  (This bug is fixed in Solaris 9.)
	(tags_regexp): Remove, since \| doesn't conform to POSIX.
	(sed_extract_prog): Issue s commands one-by-one, rather than
	using \| in one s command.

2003-09-16  Bruno Haible  <bruno@clisp.org>

	* gnulib-tool (func_create_testdir): Warn about duplicated
	dependencies.

2003-09-15  Paul Eggert  <eggert@twinsun.com>

	* modules/argmatch, modules/fatal, modules/obstack,
	modules/xalloc, modules/xgethostname: Sort dependencies by
	importance, not alphabetically.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	* modules/fwriteerror: New file.
	* MODULES.html.sh (func_all_modules): Add fwriteerror.

2003-09-12  Paul Eggert  <eggert@twinsun.com>

	* modules/argmatch, modules/exitfail, modules/fatal, modules/obstack,
	modules/xgethostname, modules/xalloc: Depend on exit.

2003-09-09  Paul Eggert  <eggert@twinsun.com>

	* README: New section: portability guidelines.

2003-09-07  Paul Eggert  <eggert@twinsun.com>

	* modules/time_r: Depend on 'restrict'.  Fix from Simon Josefsson in
	<http://mail.gnu.org/archive/html/bug-gnulib/2003-09/msg00028.html>.

2003-09-06  Paul Eggert  <eggert@twinsun.com>

	* MODULES.html.sh (func_all_modules): Add time_r.
	* modules/time_r: New file.
	* modules/mktime, modules/strftime, modules/timegm: Depend on time_r.
	* modules/timegm: Depend on mktime.  Change maintainer to "all, glibc".

2003-08-31  Simon Josefsson  <jas@extundo.com>

	* modules/timegm: New file.
	* MODULES.html.sh (func_all_modules): Add timegm.

2003-08-22  Simon Josefsson  <jas@extundo.com>

	* modules/strndup (Makefile.am): Add strndup.h to lib_SOURCES.
