@@ -1,3 +1,8 @@
+2003-09-25  Bruno Haible  <bruno@clisp.org>
+
+	* version-etc-2.h: New file, from version-etc.h with modifications.
+	* version-etc-2.c: New file, from version-etc.c with modifications.
+
 2003-09-25  Simon Josefsson  <jas@extundo.com>
 
 	* xgetdomainname.h: New file.
