@@ -1,3 +1,9 @@
+2003-09-25  Bruno Haible  <bruno@clisp.org>
+
+	* modules/version-etc-2: New file, from modules/version-etc with
+	modifications.
+	* MODULES.html.sh (func_all_modules): Add version-etc-2.
+
 2003-09-25  Simon Josefsson  <jas@extundo.com>
             Bruno Haible  <bruno@clisp.org>
 
